# musl-cmake

./: CMakeLists.txt  src_files.cmake
include/: aio.h  alloca.h  complex.h  crypt.h  ctype.h  dirent.h  dlfcn.h  err.h  errno.h  fcntl.h  features.h  fenv.h  float.h  fmtmsg.h  fnmatch.h  ftw.h  getopt.h  glob.h  grp.h  iconv.h  ifaddrs.h  inttypes.h  langinfo.h  libgen.h  libintl.h  link.h  locale.h  malloc.h  math.h  mntent.h  monetary.h  mqueue.h  netdb.h  nl_types.h  poll.h  pthread.h  pty.h  pwd.h  regex.h  resolv.h  (+27 more)
include/arpa/: inet.h  nameser.h
include/net/: if.h
include/netinet/: ether.h  in.h
include/sys/: acct.h  auxv.h  cachectl.h  epoll.h  eventfd.h  fanotify.h  file.h  fsuid.h  inotify.h  io.h  ioctl.h  ipc.h  klog.h  membarrier.h  mman.h  mount.h  msg.h  personality.h  prctl.h  ptrace.h  quota.h  random.h  reboot.h  resource.h  select.h  sem.h  sendfile.h  shm.h  signalfd.h  socket.h  stat.h  statfs.h  statvfs.h  swap.h  sysinfo.h  time.h  timeb.h  timerfd.h  times.h  timex.h  (+5 more)
ldso/: dynlink.c
noarch/include/: syscall_arch.h
src/aio/: aio.c  aio_suspend.c  lio_listio.c
src/complex/: cabs.c  cabsf.c  cabsl.c  cacos.c  cacosf.c  cacosh.c  cacoshf.c  cacoshl.c  cacosl.c  carg.c  cargf.c  cargl.c  casin.c  casinf.c  casinh.c  casinhf.c  casinhl.c  casinl.c  catan.c  catanf.c  catanh.c  catanhf.c  catanhl.c  catanl.c  ccos.c  ccosf.c  ccosh.c  ccoshf.c  ccoshl.c  ccosl.c  cexp.c  cexpf.c  cexpl.c  clog.c  clogf.c  clogl.c  conj.c  conjf.c  conjl.c  cpow.c  (+20 more)
src/conf/: confstr.c  fpathconf.c  legacy.c  pathconf.c  sysconf.c
src/crypt/: crypt.c  encrypt.c
src/ctype/: __ctype_get_mb_cur_max.c  isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  iswalnum.c  iswalpha.c  iswblank.c  iswcntrl.c  iswctype.c  iswdigit.c  iswgraph.c  iswlower.c  iswprint.c  iswpunct.c  iswspace.c  iswupper.c  iswxdigit.c  isxdigit.c  toascii.c  tolower.c  toupper.c  towctrans.c  wcswidth.c  wctrans.c  wcwidth.c
src/dirent/: alphasort.c  closedir.c  dirfd.c  fdopendir.c  opendir.c  readdir.c  readdir_r.c  rewinddir.c  scandir.c  seekdir.c  telldir.c  versionsort.c
src/env/: __stack_chk_fail.c  clearenv.c  getenv.c  putenv.c  secure_getenv.c  setenv.c  unsetenv.c
src/errno/: __errno_location.c  strerror.c
src/exit/: _Exit.c  abort.c  at_quick_exit.c  atexit.c
src/fcntl/: creat.c  fcntl.c  open.c  openat.c  posix_fadvise.c  posix_fallocate.c
src/fenv/: __flt_rounds.c  fegetexceptflag.c  feholdexcept.c  fenv.c  fesetexceptflag.c  fesetround.c  feupdateenv.c
src/include/: features.h  stdlib.h
src/ipc/: ftok.c  msgctl.c  msgget.c  msgrcv.c  msgsnd.c  semctl.c  semget.c  semop.c  semtimedop.c  shmat.c  shmctl.c  shmdt.c  shmget.c
src/ldso/: dlclose.c  dlerror.c  dlinfo.c  dlsym.c
src/legacy/: cuserid.c  daemon.c  err.c  euidaccess.c  ftw.c  futimes.c  getdtablesize.c  getloadavg.c  getpagesize.c  getpass.c  getusershell.c  isastream.c  lutimes.c  ulimit.c  utmpx.c  valloc.c
src/linux/: adjtime.c  adjtimex.c  brk.c  cache.c  chroot.c  clock_adjtime.c  clone.c  copy_file_range.c  epoll.c  eventfd.c  fallocate.c  fanotify.c  flock.c  getdents.c  getrandom.c  gettid.c  inotify.c  ioperm.c  iopl.c  klogctl.c  memfd_create.c  mlock2.c  mount.c  name_to_handle_at.c  open_by_handle_at.c  personality.c  ppoll.c  prctl.c  prlimit.c  process_vm.c  ptrace.c  quotactl.c  readahead.c  reboot.c  remap_file_pages.c  sbrk.c  sendfile.c  setfsgid.c  setfsuid.c  setgroups.c  (+18 more)
src/locale/: bind_textdomain_codeset.c  catclose.c  catgets.c  catopen.c  dcngettext.c  freelocale.c  iconv.c  iconv_close.c  localeconv.c  setlocale.c  strcoll.c  strfmon.c  strxfrm.c  textdomain.c  wcscoll.c  wcsxfrm.c
src/malloc/: calloc.c  free.c  lite_malloc.c  memalign.c  posix_memalign.c  realloc.c  reallocarray.c
src/math/: __fpclassify.c  __fpclassifyf.c  __fpclassifyl.c  __signbit.c  __signbitf.c  __signbitl.c  acos.c  acosf.c  acosh.c  acoshf.c  acoshl.c  acosl.c  asin.c  asinf.c  asinh.c  asinhf.c  asinhl.c  asinl.c  atan.c  atan2.c  atan2f.c  atan2l.c  atanf.c  atanh.c  atanhf.c  atanhl.c  atanl.c  cbrt.c  cbrtf.c  cbrtl.c  ceil.c  ceilf.c  ceill.c  copysign.c  copysignf.c  copysignl.c  cos.c  cosf.c  cosh.c  coshf.c  (+152 more)
src/misc/: a64l.c  basename.c  dirname.c  ffs.c  ffsl.c  ffsll.c  fmtmsg.c  forkpty.c  get_current_dir_name.c  getdomainname.c  getentropy.c  gethostid.c  getopt.c  getopt_long.c  getpriority.c  getresgid.c  getresuid.c  getrlimit.c  getrusage.c  getsubopt.c  initgroups.c  ioctl.c  issetugid.c  lockf.c  login_tty.c  mntent.c  nftw.c  openpty.c  ptsname.c  pty.c  realpath.c  setdomainname.c  setpriority.c  setrlimit.c  syscall.c  syslog.c  uname.c  wordexp.c
src/mman/: mincore.c  mlock.c  mlockall.c  msync.c  munlock.c  munlockall.c  posix_madvise.c  shm_open.c
src/mq/: mq_close.c  mq_getattr.c  mq_notify.c  mq_open.c  mq_receive.c  mq_send.c  mq_setattr.c  mq_timedreceive.c  mq_timedsend.c  mq_unlink.c
src/multibyte/: btowc.c  c16rtomb.c  c32rtomb.c  mblen.c  mbrlen.c  mbrtoc16.c  mbrtoc32.c  mbrtowc.c  mbsinit.c  mbsnrtowcs.c  mbsrtowcs.c  mbstowcs.c  mbtowc.c  wcrtomb.c  wcsnrtombs.c  wcsrtombs.c  wcstombs.c  wctob.c  wctomb.c
src/network/: accept.c  accept4.c  bind.c  connect.c  dn_comp.c  dn_skipname.c  ent.c  ether.c  freeaddrinfo.c  gai_strerror.c  getaddrinfo.c  gethostbyaddr.c  gethostbyaddr_r.c  gethostbyname.c  gethostbyname2.c  gethostbyname2_r.c  gethostbyname_r.c  getifaddrs.c  getnameinfo.c  getpeername.c  getservbyname.c  getservbyname_r.c  getservbyport.c  getservbyport_r.c  getsockname.c  getsockopt.c  h_errno.c  herror.c  hstrerror.c  htonl.c  htons.c  if_freenameindex.c  if_indextoname.c  if_nameindex.c  if_nametoindex.c  (+29 more)
tools/: update_version.cmake  version.h.in
(+694 files in other folders)
